--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>For You</title>
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"><link rel="stylesheet" href="./style.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"><link rel="stylesheet" href="letter.css">
 
 </head>
 <body>
@@ -109,7 +109,7 @@
   </article>  
 </body>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="letter.js"></script>
 
 </body>
 </html>
